@@ -70,7 +70,7 @@ rmw using '-ffg'.
 By default, force is not required to enable the purge feature. If you would
 like to require it, add 'force_required' to your config file.
 .TP
-\fB\-e\fR, \fB\-\-empty\fR
+\fB\-\-empty\fR
 completely empty (purge) all waste directories
 .TP
 \fB\-r\fR, \fB\-R\fR, \fB\-\-recursive\fR
