@@ -1,5 +1,9 @@
 === rmw ChangeLog ===
 
+2021-12-30
+
+  * removed '-e' command line option ('--empty' option not affected)
+
 2021-06-28
 
   * rmw v0.8.0 released
